Refactor AI provider configuration and selection
This commit introduces a more modular and flexible approach to configuring and selecting AI providers. Key changes include:

- **Enhanced `AIProviderConfig`:** The `AIProviderConfig` class has been refactored to support multiple LLM and embedding providers (OpenAI, Anthropic, Cohere, ONNX, REST) with dedicated nested configuration classes. This allows for independent configuration of each provider.
- **Provider Selection Logic:** The `AIProviderManager` now uses a more sophisticated provider selection strategy. It prioritizes the provider explicitly configured in `AIProviderConfig` and falls back to a default selection if the preferred provider is not available or enabled.
- **`ProviderConfig` Beans:** Specific `ProviderConfig` beans are now created for each supported provider (e.g., `openAIProviderConfig`, `cohereProviderConfig`, `anthropicProviderConfig`). This allows for better dependency injection and conditional bean creation.
- **Improved `AIInfrastructureAutoConfiguration`:** The auto-configuration class has been updated to create these new provider-specific beans and to correctly wire them into the system.
- **Refined `AICoreService`:** The `AICoreService` now utilizes the `AIProviderConfig` to resolve default LLM and embedding models, making it more adaptable to different provider configurations.
- **Updated Health and Configuration Services:** `AIHealthService` and `AIConfigurationService` have been updated to reflect the new provider structure and provide more detailed status information.
- **Mock Service Updates:** Mock services have been updated to use the new provider configuration defaults.
- **Test Updates:** Unit tests have been updated to align with the new configuration structure.

These changes significantly improve the extensibility and maintainability of the AI infrastructure by allowing users to easily configure and switch between different AI providers.

Co-authored-by: engmahmoudalgamal <engma